--- a/templates/main.html
+++ b/templates/main.html
@@ -12,7 +12,7 @@
 
         <div class="row text-center">
           <div class="col-md-12">  
-            <img src="../static/bob_avatar.png" height="162" width="162"/> 
+            <img src="../static/viki_avatar.png" height="162" width="162"/> 
             <h1><b>{{ pages[0] }}</b></h1> 
           </div>
         </div>
