--- a/templates/main.html
+++ b/templates/main.html
@@ -41,7 +41,7 @@
 
       <div class="row text-center">
         <div class="col-md-12">
-          <p id="copyrightText">&#169; Lyubomir Mihaylov 2019</p>
+          <p id="copyrightText">&#169; Lyubomir Mihaylov</p>
         </div>
       </div>
       
@@ -71,7 +71,7 @@
 
         #copyrightText{
           margin-top: 155px;
-          font-size: 15px;
+          font-size: 25px;
           color:#ff3300;
         }
 
@@ -106,9 +106,10 @@
 
         #input_btn {
           color: #ff3300;
-          font-family: ariel;
+          font-family: bobFont;
           width: 140px;
           height: 50px;
+		  border-width: 5px;
           border-color: #ff3300;
           border-radius:10px;	
         }
