--- a/flaskr/templates/main.html
+++ b/flaskr/templates/main.html
@@ -49,6 +49,35 @@
         </div>
       </div>
 
+      <!-- Display products -->
+      <div class="row text-center">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <div id="productsList">
+ <!--
+            <div class="product">
+                <img class="productImage" src="static/database/pizzas/calzone.jpg"/>
+                <div>calzone</div>
+            </div>
+
+            <div class="product">
+              <img class="productImage" src="static/database/pizzas/pepperoni.jpg"/>
+              <div>pepperoni</div>
+            </div>
+            
+            <div class="product">
+              <img class="productImage" src="static/database/pizzas/venetian_rolled.jpg"/>
+              <div>venetian_rolled</div>
+            </div>
+
+            <div class="product">
+              <img class="productImage" src="static/database/pizzas/venetian_rolled.jpg"/>
+              <div>venetian_rolled 2</div>
+            </div>
+-->
+          </div> <!-- products list -->
+        </div> <!-- col class -->
+      </div>
+
       <div class="row text-center">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
           <p id="copyrightText">&#169; Lyubomir Mihaylov</p>
@@ -73,6 +102,48 @@
         // Empty the input field on load/reload.
         $(document).ready(function() {
             $("#userInput").val("");    
-        });                    
+        });
+        
+        function displayProducts(productsOBJ){                  
+            for(let i = 0; i < productsOBJ.length; i++){
+                // Outer wrapper
+                const productElement = document.createElement('div');
+                productElement.setAttribute("class", "product");
+                $("#productsList").append(productElement);
+                
+                // Add product image
+                const productElementInner = document.createElement('img');
+                productElementInner.setAttribute("class", "productImage");
+                productElementInner.setAttribute("src", productsOBJ[i].src);
+                productElement.appendChild(productElementInner)
+               
+                // Add product description and price
+                const productDescription = document.createElement('div');
+                productDescription.setAttribute("class", "productDescription");
+                productDescription.innerText = productsOBJ[i].name + "\n" +  
+                                               "Price: " + productsOBJ[i].price + "\n" +  
+                                               "Ingredients:\n" + productsOBJ[i].ingredients;
+                productElement.appendChild(productDescription);
+            }                         
+        }
+
+        let productType = "pizzas/";
+        let imagesPath = "static/database/" + productType;
+        
+        productsOBJ = [
+                      { src : imagesPath + "calzone.jpg",
+                        name: "Calzone",
+                        price : 50,
+                        ingredients: "cheese, ham etc. etc."
+                      }, 
+                      {
+                        src: imagesPath + "pepperoni.jpg",
+                        name : "Pepperoni",
+                        price : 20,
+                        ingredients : "cheese, lots of tomato, garlic etc."
+                      }
+                    ];
+
+        displayProducts(productsOBJ);        
     </script>
 </html>
