display recommended topics

--- a/flaskr/templates/main.html
+++ b/flaskr/templates/main.html
@@ -25,6 +25,9 @@
             <div>
               
             <div style="border:solid;" id="inputBtn">Talk to Viki</div>
+            <div id="recommendedTopics">
+              
+            </div>
           </div>
           <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
         </div>
@@ -144,6 +147,6 @@
                       }
                     ];
 
-        displayProducts(productsOBJ);        
+        displayProducts(productsOBJ);      
     </script>
 </html>
