--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -66,6 +66,24 @@
     border: 2px solid #ff3300;
   }
 
+  #recommendedTopics{
+    height: 5em;
+  }
+
+  .recommendedTopic{
+    padding: 0.5em;
+    float:left;
+    background: #ff3300;
+    color: #ffcc66;
+    width: 5em;
+    max-height: 5em;
+    cursor: pointer;
+    border-radius: 12px;
+    font-size: 20px;
+    margin-top: 1em;
+    margin-left: 1em;
+  }
+
   #responseText {
     font-size:20px;
     color:#ffcc66;
