--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -23,12 +23,12 @@
   }
 
   #suggestion{
-       border: 5px #ff3300;        
-       border-radius: 10px;
-       margin-top: -1em;
-       min-height: 5em;
-       background: white;
-       display: none;
+    border: 5px #ff3300;        
+    border-radius: 10px;
+    margin-top: -1em;
+    min-height: 5em;
+    background: white;
+    display: none;
   }
 
   #copyrightText{
@@ -50,15 +50,22 @@
 
   #userInput {
     padding-left: 1em;
-    margin-top: 1em;
+    /* margin-top: 1em; */
     font-family: ariel;
     color: black;
     width: 100%;
-    height: 40px;
+    height: 2.5em;
+    max-height: 5em;
+    min-height: 2.5em;
     border: solid;
     border: 20px;
     box-shadow: 5px 5px 8px #666;
     border-radius: 10px;
+    resize: vertical;
+  }
+
+  #userInput::placeholder {
+    line-height: 2em;
   }
 
   #userInput:focus{
